--- a/render.yaml
+++ b/render.yaml
@@ -8,3 +8,16 @@ services:
     envVars:
       - key: PORT
         value: 8080
+
+  # Frontend Service - React Static Site
+  - type: web
+    name: vicky-salon-frontend
+    runtime: static
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: ./frontend/build
+    plan: free
+    envVars:
+      - key: REACT_APP_API_URL
+        value: https://vicky-salon-backend.onrender.com/api
+      - key: REACT_APP_OWNER_PASSWORD
+        value: Iit7065@
